Prevent img layout shift in info modal, hide systemSE slider

--- a/src/styles/title-menu.scss
+++ b/src/styles/title-menu.scss
@@ -270,7 +270,7 @@
 				grid-template-columns: repeat(auto-fill, minmax(min(100%, 110px), 1fr));
 			}
 		}
-		.tsuki-logo {
+		.tsuki-cover {
 			display: block;
 			width: 100%;
 			min-width: 0;
